# IsopGem

./: .env.example  .gitignore  .pre-commit-config.yaml  FILE_TRACKER.md  README.md  check_core_types.py  debug_properties_check.py  debug_properties_final.py  final_review_gate.py  main.py  minimal_test.py  mypy.ini  mypy_report.txt  prioritize_type_errors.py  prioritized_errors.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_abundance_deficiency_final.py  test_basic_functionality.py  test_calculation_db.py  test_calculation_history.py  test_database_entries_tab.py  test_document.py  test_eclipse_chart.py  test_encoding_conversion.py  test_enhanced_import.py  test_enhanced_tag_display.py  test_ephemeris.py  test_final_review_gate.py  test_final_verification.py  test_formatting_logic.py  test_gematria_integration_complete.py  test_grid_layout.py  test_interpreter.py  test_kwic_concordance.py  test_multiple_tags.py  test_number_dictionary.py  (+13 more)
.cursor/: modes.json
.cursor/rules/: reviewgate.mdc
.pycharm/: README.md  mode_activator.md
.pycharm/modes/: README.md  code_mode.md  (+11 more)
astrology/: __init__.py
cache/: kerykeion_geonames_cache.sqlite
config/: default.yaml  development.yaml  production.yaml
docs/: ASTROLOGICAL_DATABASE.md  FILE_TRACKER.md  Gematria_Methods.md  TERNARY_INTERPRETATION_FRAMEWORK.md  changelog.md  file_tracker.md  kamea_cosmic_calendar.md  tag_note_system_plan.md  ternary_transition_system.md  twenty_two_midpoints.md  twenty_two_midpoints.txt  ui_mock_note_manager.md
document_manager/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  document_manager_pillar.py
gematria/: __init__.py
mypy_report/: index.html
requirements/: base.txt  dev.txt  test.txt
scripts/: activate_mode.py  create_golden_ratio_icon.py  cursor_mode_info.py  db_inspection_output.txt  generate_ditrune_db.py  inspect_isopgem_db.py  populate_aspects_database.py  populate_planet_phases.py  view_aspects.py  view_planet_phases.py
tests/: __init__.py  conftest.py  run_window_test.py  test_attachment_service.py  test_rtf_note_editor.py  verify_golden_trisection.py  window_verification_test.py
venv_py311/: pyvenv.cfg
(+467 files in other folders)
